--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -1,6 +1,6 @@
 <!--Navbar -->
 <nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: #ffffff;" id="navbar">
-    <a class="navbar-brand" href="#">{{ 'APP.TITLE'| trans }}</a>
+    <a class="navbar-brand" href="{{ path('homepage') }}">{{ 'APP.TITLE'| trans }}</a>
     {#    <form class="form-inline has-search">#}
     {#        <div class="form-group has-search">#}
     {#            <span class="fa fa-search form-control-feedback"></span>#}
@@ -59,7 +59,7 @@
             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                 {#Here should go the href to user profile#}
                 <li class="nav-item">
-                    <a class="nav-link" id="username"
+                    <a class="nav-link" id="navbar_gravatar"
                        alt="Logged as {{ app.user.username }}">{{ avatar.getAvatar(app.user.username, 35) | raw }}</a>
                 </li>
             {% endif %}
