--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -24,7 +24,7 @@
 
             <div class="pagination navigation">
                 {{ knp_pagination_render(items) }}
-            </div>card-img-top
+            </div>
         </div>
 
         <div class="container-fluid justify-content-center">
