Hotfix swap message

--- a/templates/mail/swap/swap-mail.html.twig
+++ b/templates/mail/swap/swap-mail.html.twig
@@ -15,7 +15,7 @@
     The trans() function passes parameters gotten from User and Item entities to be inserted inside
     the text in messages.[two letter code here].yaml</p>
 
-<p>{{ text-coming-from-swapForm }}</p>
+<p>{{ textComingFromSwapForm }}</p>
 
 
 </body>
