--- a/templates/mail/swap/swap-mail.txt.twig
+++ b/templates/mail/swap/swap-mail.txt.twig
@@ -1,3 +1,4 @@
 {{ 'SWAP.MAIL.TITLE'|trans({'%item%': item.getTitle(), '%name%': user.getUsername()}) }}
 
 {# FIXME: We need content using the entities Item and User properties as above #}
+{{ textComingFromSwapForm }}
