--- a/templates/mail/report/report-mail.html.twig
+++ b/templates/mail/report/report-mail.html.twig
@@ -14,6 +14,7 @@
 
 {# FIXME: Content needed #}
 <p>We need content here! User and Item properties are available to use on the text as in titles above</p>
+{{ textComingFromReportForm }}
 
 
 </body>
