--- a/templates/mail/report/report-mail.txt.twig
+++ b/templates/mail/report/report-mail.txt.twig
@@ -3,3 +3,4 @@
 
 {# FIXME: We need content using the entities Item and User properties as above
  if the report didn't come from loged in User, user is null and |default() will be rendered instead #}
+{{ textComingFromReportForm }}
