--- a/templates/item/details.html.twig
+++ b/templates/item/details.html.twig
@@ -15,11 +15,11 @@
             <tbody>
             <tr>
                 <th style="color: rgb(70,161,142)">Title:</th>
-                <td>{{ item.title }}</td>
+                <td><span>{{ item.title }}</span></td>
             </tr>
             <tr>
                 <th style="color: #46a18e">Condition Status:</th>
-                <td>{{ item.conditionStatus }}</td>
+                <td><span>{{ item.conditionStatus }}</span></td>
             </tr>
             <tr>
                 <th style="color: #46a18e">Description:</th>
