--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,6 @@
     margin: 0;
     padding: 0;
     transition-duration: 0.1s;
-
 }
 ::-webkit-scrollbar {
     display: none;
@@ -38,8 +37,6 @@ ol > li:before {
     content: counter(item) ".";
 }
 
-
-
 body{
     display: flex;
     flex-direction: column;
@@ -60,59 +57,60 @@ body{
 }
 
 .form_grey_input {
-
     border-radius: 3px;
     border: 0 solid #e6e6e6;
     background-color: #F6F6F6;
     color: gray();
-
 }
+
 .form_grey_input::placeholder {
     color: gray();
 }
+#inputUsername {
+    margin: 0;
+    margin-bottom: 10px;
+}
+#inputPassword {
+    margin: 0;
+    margin-bottom: 10px;
+}
 .navbar {
-
     background-color: #ffffff;
     box-shadow: -6px 4px 7px -5px rgba(0,0,0,0.75);
 }
+
 .border-letzswap {
     border-radius: 102px 102px 102px 102px;
     border: 0px solid lightgray;
     background-color: lightgray;
-
 }
+
 .navbar-toggler {
     border: none;
-}
-#search-height {
-    height: 25px;
-}
 
-.has-search .form-control {
-    padding-left: 2.375rem;
 }
+/*Search bar*/
 
-.has-search .form-control-feedback {
-    position: absolute;
-    z-index: 2;
-    display: block;
-    width: 2.375rem;
-    height: 2.375rem;
-    line-height: 2.375rem;
-    text-align: center;
-    pointer-events: none;
-    color: #aaa;
-}
-/*
-.navbar_list {
-    top: 0;
-    margin-bottom: 9px;
-    padding: 0;
-    display: flex;
-    flex-direction: row;
-    color: #336655;
-    list-style: none;
-}
+/*#search-height {*/
+    /*height: 25px;*/
+/*}*/
+
+/*.has-search .form-control {*/
+    /*padding-left: 2.375rem;*/
+/*}*/
+
+/*.has-search .form-control-feedback {*/
+    /*position: absolute;*/
+    /*z-index: 2;*/
+    /*display: block;*/
+    /*width: 2.375rem;*/
+    /*height: 2.375rem;*/
+    /*line-height: 2.375rem;*/
+    /*text-align: center;*/
+    /*pointer-events: none;*/
+    /*color: #aaa;*/
+/*}*/
+
 .button {
     padding: 2px 18px;
     margin-left: 5px;
@@ -124,21 +122,10 @@ body{
     }
 .button:hover {
     background-color: #336655;
+    color: white;
 
 }
 
-.navbar_link {
-    color: #336655;
-    text-decoration: none;
-    font-weight: 400;
-    }
-
-.navbar_link:hover {
-    text-decoration: none;
-    color:#ffffff;
-}
-Navbar design ending
-*/
 /*Text from the top main page - header*/
 #elevator_pitch {
     margin-top: 10px;
@@ -175,6 +162,7 @@ Navbar design ending
     justify-content: center;
     flex-direction: row;
 }
+/*Item cards start*/
 .card {
     width: 330px;
     height: 370px;
@@ -192,9 +180,29 @@ Navbar design ending
     -webkit-animation-direction: alternate;
     animation: move-in 0.5s;
 }
+
 .card-title {
     font-size: 18px;
 }
+
+.card:hover {
+    /*outline: 5px solid #c9f0e3;
+    /*-webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);*/
+    /*box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);*/
+    /*-webkit-transform: translateY(-5px);*/
+    /*transform: translateY(-5px);*/
+}
+.card:hover {
+    box-shadow: 0 0 2pt 2pt #336655;
+}
+
+.card-img-top {
+    max-height: 260px;
+    object-fit: cover;
+}
+
+/*Item cards end*/
+
 @keyframes move-in {
     0% {
         opacity: 0;
@@ -205,7 +213,6 @@ Navbar design ending
         transform: translateY(0);
     }
 }
-
 
 /* This is the start of the Fade in for the card and elevator pitch, Karlo */
 @keyframes fadein {
@@ -237,24 +244,7 @@ Navbar design ending
     to   { opacity: 1; }
 }
 
-.card:hover {
-    /*outline: 5px solid #c9f0e3;
-    /*-webkit-box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);*/
-    /*box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);*/
-    /*-webkit-transform: translateY(-5px);*/
-    /*transform: translateY(-5px);*/
-}
-.card:hover {
-    box-shadow: 0 0 2pt 2pt #336655;
-}
-
-/* This is the end of the Fade in for the card and elevator pitch, I (Karlo) also added border-radius to the card hover
-its the same what Marco put but only with a border radius tell me what you think*/
-
-.card-img-top {
-    max-height: 260px;
-    object-fit: cover;
-}
+/* This is the end of the Fade in for the card and elevator pitch, I (Karlo) also added border-radius*/
 
 #add_item_buttons {
     display: flex;
@@ -289,7 +279,6 @@ its the same what Marco put but only with a border radius tell me what you think
     width: 100px;
     height: 100px;
     margin-right:2rem ;
-
 }
 
 .btn-success, .btn-primary {
@@ -298,6 +287,7 @@ its the same what Marco put but only with a border radius tell me what you think
     border-radius: 10px;
     padding: 0.45rem;
 }
+
 .row img {
     width: 250px;
     height: 250px;
@@ -319,7 +309,7 @@ its the same what Marco put but only with a border radius tell me what you think
 
 .footer_elements {
     display: flex;
-    justify-content: space-between; /*WHY DOES THIS NOT PUT SPACE BETWEEN TOS AND COPYRIgtH?? ARGHRGH*/ /* Idk Filip */
+    justify-content: space-between;
     align-items: center;
     list-style: none;
 }
@@ -497,205 +487,205 @@ table caption {
 
 /* Admin dashboard end */
 
-/* Tablet */
-@media screen and (min-width:800px) {
-    #elevator_pitch h2{
-        text-align: center;
-        font-family: 'Catamaran', sans-serif;
-        font-size: 28px;
-        align-items: center;
-        /*animation: fadein 3s;*/
-    }
-    #elevator_pitch p {
-        font-size: 16px;
-        text-align: center;
-        font-family: 'Source Sans Pro', sans-serif;
+/*!* Tablet *!*/
+/*@media screen and (min-width:800px) {*/
+    /*#elevator_pitch h2{*/
+        /*text-align: center;*/
+        /*font-family: 'Catamaran', sans-serif;*/
+        /*font-size: 28px;*/
+        /*align-items: center;*/
+        /*!*animation: fadein 3s;*!*/
+    /*}*/
+    /*#elevator_pitch p {*/
+        /*font-size: 16px;*/
+        /*text-align: center;*/
+        /*font-family: 'Source Sans Pro', sans-serif;*/
 
-    }
-    .button {
-        padding: 2px 18px;
-        margin-left: 5px;
-        margin-right: 5px;
-        border-radius: 10px;
-        font-size: 14px;
-        background-color: none;
-        border:1px solid #336655;
-    }
+    /*}*/
+    /*.button {*/
+        /*padding: 2px 18px;*/
+        /*margin-left: 5px;*/
+        /*margin-right: 5px;*/
+        /*border-radius: 10px;*/
+        /*font-size: 14px;*/
+        /*background-color: none;*/
+        /*border:1px solid #336655;*/
+    /*}*/
 
 
-    #item_detail_buttons {
-        display: flow;
-        justify-content: center;
-        margin: 1rem;
-    }
-    #item_detail_buttons button {
-        margin: 1rem;
-    }
-    #description {
-        display: flex;
-        margin: 1rem;
-    }
-    #description img {
-        width: 600px;
-        height: 450px;
-    }
-    .img-thumbnail {
-        border:none;
-    }
-    #back_button {
-        display: block;
-        margin-top: 1rem;
-        margin-left: auto;
-        margin-right: auto;
-        width: 20%;
+    /*#item_detail_buttons {*/
+        /*display: flow;*/
+        /*justify-content: center;*/
+        /*margin: 1rem;*/
+    /*}*/
+    /*#item_detail_buttons button {*/
+        /*margin: 1rem;*/
+    /*}*/
+    /*#description {*/
+        /*display: flex;*/
+        /*margin: 1rem;*/
+    /*}*/
+    /*#description img {*/
+        /*width: 600px;*/
+        /*height: 450px;*/
+    /*}*/
+    /*.img-thumbnail {*/
+        /*border:none;*/
+    /*}*/
+    /*#back_button {*/
+        /*display: block;*/
+        /*margin-top: 1rem;*/
+        /*margin-left: auto;*/
+        /*margin-right: auto;*/
+        /*width: 20%;*/
 
-    }
-    .new_item_page {
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        max-width: 950px;
-    }
-    /* Apolline's modal to be applied differently on each platform */
-    .modal-dialog {
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%) !important;
-    }
-    .about_info{
-        text-align: center;
-        display: flex;
-        font-size: 20px;
-        flex-direction: column;
-        justify-content: center;
-        max-width: 550px;
-    }
-    .about_info h2 {
-        font-size: 60px;
+    /*}*/
+    /*.new_item_page {*/
+        /*margin: 0 auto;*/
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*justify-content: center;*/
+        /*max-width: 950px;*/
+    /*}*/
+    /*!* Apolline's modal to be applied differently on each platform *!*/
+    /*.modal-dialog {*/
+        /*position: absolute;*/
+        /*top: 30%;*/
+        /*left: 50%;*/
+        /*transform: translate(-50%, -50%) !important;*/
+    /*}*/
+    /*.about_info{*/
+        /*text-align: center;*/
+        /*display: flex;*/
+        /*font-size: 20px;*/
+        /*flex-direction: column;*/
+        /*justify-content: center;*/
+        /*max-width: 550px;*/
+    /*}*/
+    /*.about_info h2 {*/
+        /*font-size: 60px;*/
 
-    }
-    .about_info h2 span {
-        color: #5ff03f;
-        font-weight: bold;
-        font-size: 60px;
+    /*}*/
+    /*.about_info h2 span {*/
+        /*color: #5ff03f;*/
+        /*font-weight: bold;*/
+        /*font-size: 60px;*/
 
-    }
-    #admin_dashboards {
-        display: flex;
-        flex-direction: column;
-        margin: 2rem;
-    }
-    #admin_dashboard_items {
-        padding: 0.5rem;
-    }
-    #admin_dashboard_items {
-        width: auto;
-    }
-    #admin_dashboard_buttons_users {
-        margin: 2rem ;
-    }
-    #admin_dashboard_items img {
-        width: 250px;
-        height: 250px;
-    }
-    #admin_dashboard_items thead {
-        display: flex;
-        justify-content: flex-end;
-        padding-right: 30px;
-    }
-    #admin_dashboard_users {
-        padding: 0.5rem;
-        align-self: center;
-    }
+    /*}*/
+    /*#admin_dashboards {*/
+        /*display: flex;*/
+        /*flex-direction: column;*/
+        /*margin: 2rem;*/
+    /*}*/
+    /*#admin_dashboard_items {*/
+        /*padding: 0.5rem;*/
+    /*}*/
+    /*#admin_dashboard_items {*/
+        /*width: auto;*/
+    /*}*/
+    /*#admin_dashboard_buttons_users {*/
+        /*margin: 2rem ;*/
+    /*}*/
+    /*#admin_dashboard_items img {*/
+        /*width: 250px;*/
+        /*height: 250px;*/
+    /*}*/
+    /*#admin_dashboard_items thead {*/
+        /*display: flex;*/
+        /*justify-content: flex-end;*/
+        /*padding-right: 30px;*/
+    /*}*/
+    /*#admin_dashboard_users {*/
+        /*padding: 0.5rem;*/
+        /*align-self: center;*/
+    /*}*/
 
-    #admin_dashboard_buttons_users {
-        margin: 2rem ;
-    }
-    #admin_dashboard_users thead {
-        padding-left: 2px;
-    }
-}
-@media screen and (min-width: 1200px) {
-    #item_detail_buttons {
-    }
-    #description img {
-        border-radius: 1.1%;
-        width: 800px;
-        height: 600px;
-    }
-    #elevator_pitch h2{
-        text-align: center;
-        font-family: 'Catamaran', sans-serif;
-        font-size: 42px;
-        align-items: center;
-        /*animation: fadein 3s;*/
-    }
-    #elevator_pitch p {
-        font-size: 24px;
-        text-align: center;
-        font-family: 'Source Sans Pro', sans-serif;
+    /*#admin_dashboard_buttons_users {*/
+        /*margin: 2rem ;*/
+    /*}*/
+    /*#admin_dashboard_users thead {*/
+        /*padding-left: 2px;*/
+    /*}*/
+/*}*/
+/*@media screen and (min-width: 1200px) {*/
+    /*#item_detail_buttons {*/
+    /*}*/
+    /*#description img {*/
+        /*border-radius: 1.1%;*/
+        /*width: 800px;*/
+        /*height: 600px;*/
+    /*}*/
+    /*#elevator_pitch h2{*/
+        /*text-align: center;*/
+        /*font-family: 'Catamaran', sans-serif;*/
+        /*font-size: 42px;*/
+        /*align-items: center;*/
+        /*!*animation: fadein 3s;*!*/
+    /*}*/
+    /*#elevator_pitch p {*/
+        /*font-size: 24px;r*/
+        /*text-align: center;*/
+        /*font-family: 'Source Sans Pro', sans-serif;*/
 
-    }
-    .button {
-        padding: 2px 18px;
-        margin-left: 5px;
-        margin-right: 5px;
-        border-radius: 10px;
-        font-size: 16px;
-        background-color: none;
-        border:1px solid #336655;
-    }
+    /*}*/
+    /*.button {*/
+        /*padding: 2px 18px;*/
+        /*margin-left: 5px;*/
+        /*margin-right: 5px;*/
+        /*border-radius: 10px;*/
+        /*font-size: 16px;*/
+        /*background-color: none;*/
+        /*border:1px solid #336655;*/
+    /*}*/
 
-    .about_info{
-        text-align: center;
-        display: flex;
-        font-size: 20px;
-        flex-direction: column;
-        justify-content: center;
-        max-width: 550px;
-    }
-    .about_info h2 {
-        font-size: 70px;
+    /*.about_info{*/
+        /*text-align: center;*/
+        /*display: flex;*/
+        /*font-size: 20px;*/
+        /*flex-direction: column;*/
+        /*justify-content: center;*/
+        /*max-width: 550px;*/
+    /*}*/
+    /*.about_info h2 {*/
+        /*font-size: 70px;*/
 
-    }
-    .about_info h2 span {
-        color: #5ff03f;
-        font-weight: bold;
-        font-size: 70px;
+    /*}*/
+    /*.about_info h2 span {*/
+        /*color: #5ff03f;*/
+        /*font-weight: bold;*/
+        /*font-size: 70px;*/
 
-    }
-    .about_info p {
-        font-size: 25px;
-    }
-    /* Apolline`s modal to be applied differently on each platform */
-    .modal-dialog {
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        transform: translate(-50%, -50%) !important;
-    }
+    /*}*/
+    /*.about_info p {*/
+        /*font-size: 25px;*/
+    /*}*/
+    /*!* Apolline`s modal to be applied differently on each platform *!*/
+    /*.modal-dialog {*/
+        /*position: absolute;*/
+        /*top: 30%;*/
+        /*left: 50%;*/
+        /*transform: translate(-50%, -50%) !important;*/
+    /*}*/
 
-    #admin_dashboards {
-        display: flex;
-        flex-direction:row ;
-        width: 1700px;
-        margin-top: 0.1rem;
-    }
-    #App {
-        min-height: initial;
-        max-width: none;
-    }
-    #admin_dashboard_items {
-        margin: auto;
-    }
-    #admin_dashboard_users {
-        margin: 0rem auto auto 1rem;
+    /*#admin_dashboards {*/
+        /*display: flex;*/
+        /*flex-direction:row ;*/
+        /*width: 1700px;*/
+        /*margin-top: 0.1rem;*/
+    /*}*/
+    /*#App {*/
+        /*min-height: initial;*/
+        /*max-width: none;*/
+    /*}*/
+    /*#admin_dashboard_items {*/
+        /*margin: auto;*/
+    /*}*/
+    /*#admin_dashboard_users {*/
+        /*margin: 0rem auto auto 1rem;*/
 
-    }
+    /*}*/
 
-}
+/*}*/
 
 
 
