--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -121,6 +121,7 @@
     c0.048-0.239,0.144-0.542,0.495-1.399c0.282-0.692,0.604-1.414,0.983-2.053c-0.398,0.564-0.838,1.154-1.402,1.826l-0.474,0.583
     l-0.179,0.178l-6.176,6.401L635.314,605.922z"/>
         </g>
+        <rect x="-10" y="900" width="1300" height="6000" fill="#336655"/>
     </svg>
 
 
