--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -18,19 +18,20 @@
             {% endif %}
         {% endif %}
         <div>
-            <div class="count my-1">
-                {{ 'HOME.ITEM_COUNT'|trans }} {{ items.getTotalItemCount }}
-            </div>
 
-            <div class="pagination navigation">
+
+            <div class=" d-flex justify-content-center pagination navigation">
                 {{ knp_pagination_render(items) }}
+            </div>
+            <div class=" d-flex justify-content-center count my-1">
+                {{ 'HOME.ITEM_COUNT'|trans }} {{ items.getTotalItemCount }}
             </div>
         </div>
 
         <div class="container-fluid justify-content-center">
             <div class="d-flex justify-content-center flex-wrap ">
                 {% for item in items %}
-                    <div class="col">
+                    <div class="d-flex justify-content-center">
                         <div class="card">
                             <img class="card-img-top"
                                  src="{{ path('get_picture_content', {'picture': item.getPictures()|first.getId()}) }}"
