--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,11 @@ body{
     background-color: white;
     font-family: 'Source Sans Pro', sans-serif;
     animation: fadein 1s;
+    -webkit-overscroll-behavior-x: none; /* Safari, Chrome and Opera > 12.1 */
+    -moz-overscroll-behavior-x: none; /* Firefox < 16 */
+    -ms-overscroll-behavior-x: none; /* Internet Explorer */
+    -o-overscroll-behavior-x: none; /* Opera < 12.1 */
+    overscroll-behavior-x: none;
 
 }
 
