--- a/templates/mail/swap/swap-mail.html.twig
+++ b/templates/mail/swap/swap-mail.html.twig
@@ -8,12 +8,16 @@
     <title>{{ 'SWAP.MAIL.TITLE'|trans({'%item%': item.getTitle(), '%name%': user.getUsername()}) }}</title>
 </head>
 <body>
-<h1>{{ 'SWAP.MAIL.TITLE'|trans({'%item%': item.getTitle(), '%name%': user.getUsername()}) }}</h1>
 
 {# FIXME: Content needed#}
-<p>We need content here! User and Item properties are available to use on the text as in titles above.
-    The trans() function passes parameters gotten from User and Item entities to be inserted inside
-    the text in messages.[two letter code here].yaml</p>
+
+<p> {{ '%username%' user.getUsername() }} is interested in your {{ '%item%' item.getTitle() }}
+
+    And he has sent the following message
+
+    {{ data.message }}
+
+</p>
 
 <p>{{ textComingFromSwapForm }}</p>
 
