--- a/templates/item/details.html.twig
+++ b/templates/item/details.html.twig
@@ -25,12 +25,10 @@
 
 
     <div id="item_detail_buttons">
-        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-            <div id="avatar">
-                {{ avatar.getAvatar(app.user.username, 100) | raw }}
-                <h2>{{ username }}</h2>
-            </div>
-        {% endif %}
+        <div id="avatar">
+            {{ avatar.getAvatar(item.getUser.getUsername(), 100) | raw }}
+            <h2>{{ username }}</h2>
+        </div>
         <a href="{{ path('homepage') }}">
             <button type="button" class="btn btn-success">Back</button>
         </a>
