--- a/templates/main/navbar.html.twig
+++ b/templates/main/navbar.html.twig
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                 {% endif %}
-                {% if is_granted('ROLE_USER') %}
+                {% if (is_granted('ROLE_USER') and uRoles != 'Banned') %}
                     <li class="nav-item {% if app.request.attributes.get('_route') == 'add_item' %} active {% endif %}">
                         <a class="nav-link" href="{{ path('item_new') }}">
                             {{ 'NAV.ADD_ITEM'|trans }}
