--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -124,8 +124,8 @@
                                 <form method="post" action="{{ path('user_unban', {'id': user.id}) }}"
                                       onsubmit="return confirm('Reactivate user?');">
                                     <input type="hidden" name="_method" value="POST">
-                                    <input type="hidden" name="csrf_token_banuser"
-                                           value="{{ csrf_token('ban-user') }}"/>
+                                    <input type="hidden" name="csrf_token_unbanuser"
+                                           value="{{ csrf_token('unban-user') }}"/>
                                     <button type="button" class="btn btn-outline-warning btn-sm">Unban</button>
                                 </form>
                             {% else %}
