--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -84,7 +84,7 @@
                 <th scope="col">Username</th>
                 <th scope="col">E-mail</th>
                 <th scope="col">Reported</th>
-                <th scope="col">Options</th>
+                <th scope="col">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -126,7 +126,7 @@
                                     <input type="hidden" name="_method" value="POST">
                                     <input type="hidden" name="csrf_token_unbanuser"
                                            value="{{ csrf_token('unban-user') }}"/>
-                                    <button type="button" class="btn btn-outline-warning btn-sm">Unban</button>
+                                    <button class="btn btn-outline-warning btn-sm">Unban</button>
                                 </form>
                             {% else %}
                                 <form method="post" action="{{ path('user_ban', {'id': user.id}) }}"
@@ -134,7 +134,7 @@
                                     <input type="hidden" name="_method" value="POST">
                                     <input type="hidden" name="csrf_token_banuser"
                                            value="{{ csrf_token('ban-user') }}"/>
-                                    <button type="button" class="btn btn-warning btn-sm">Ban</button>
+                                    <button class="btn btn-warning btn-sm">Ban</button>
                                 </form>
                             {% endif %}
                             <form method="post" action="{{ path('user_delete', {'id': user.id}) }}"
