Hotfix buttons id duplication

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -38,7 +38,7 @@
                                  alt="{{ item.title }}" width="250">
                             <div class="card-body">
                                 <h5 class="card-title">{{ item.title }}</h5>
-                                <div id="butons">
+                                <div class="butons">
                                     <a href="{{ path('item_details', {'id': item.getId()}) }}"
                                        class="btn btn-info"><i class="fas fa-info"></i></a>
                                 </div>
